fix overflow in intro

--- a/chrome_plugin/css/style.css
+++ b/chrome_plugin/css/style.css
@@ -6,6 +6,10 @@ html, * {
 	font-size: 12px;
 }
 
+body {
+	overflow-x: hidden;
+}
+
 .modal {
 	overflow-y: scroll !important;
 }
